# model-parameters-pipeline-py

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  adding-a-step.html  api.html  genindex.html  index.html  introduction.html  objects.inv  pyproject.toml  search.html  searchindex.js  step-tests.html
.doctrees/: adding-a-step.doctree  api.doctree  environment.pickle  index.doctree  introduction.doctree  step-tests.doctree
.github/workflows/: lint.yaml  release-pyodide-wheel.yaml  sphinx.yaml  test.yaml
_sources/: api.rst.txt  index.rst.txt  introduction.rst.txt
docs/: adding-a-step.rst  conf.py  step-tests.rst
src/model_parameters_pipeline/: __init__.py  _utils.py  pipeline.py
src/model_parameters_pipeline/steps/: center.py  dummy.py  interaction.py  logistic_regression.py  rcs.py
tests/: conftest.py  generate_step_tests_expected.py  test_pipeline.py  test_utils.py
tests/testdata/htnport-reduced/: HTNPoRT-female-center.csv  HTNPoRT-female-dummy.csv  HTNPoRT-female-logistic.csv  HTNPoRT-female-model-export.csv  HTNPoRT-female-model-steps.csv  HTNPoRT-female-rcs.csv  HTNPoRT-female-validation-data.csv  HTNPoRT-female-variables.csv  HTNPoRT-male-center.csv  HTNPoRT-male-interactions.csv  HTNPoRT-male-logistic.csv  HTNPoRT-male-model-export.csv  HTNPoRT-male-model-steps.csv  HTNPoRT-male-rcs.csv  HTNPoRT-male-validation-data.csv  HTNPoRT-male-variable-details.csv  README.md
tests/testdata/step-tests/: test-data.csv  test-variables.csv
tests/testdata/step-tests/test-center/: test-center.csv  test-expected.csv  test-model-steps.csv
(+13 files in other folders)
