[project]
name = "model-parameters-pipeline"
version = "0.2.0"
description = "Data transformation pipeline based on the Model Parameters specification developed by Big Life Lab"
license = {text = "MIT"}
authors = [
    {name = "Martin Wellman", email = "mwellman@ohri.ca"},
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[project.urls]
Homepage = "https://github.com/Big-Life-Lab/model-parameters-pipeline-py"
Documentation = "https://big-life-lab.github.io/model-parameters-pipeline-py/"
Issues = "https://github.com/Big-Life-Lab/model-parameters-pipeline-py/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
